# protobuf-generate

./: BUILD.bazel  Earthfile  README.md  WORKSPACE  api.proto  dagger.cue  go.mod
dagger/pb/: api.pb.go
earthly/pb/: api.pb.go
